# invoice_extraction_app

./: README.md  pyproject.toml  requirements.txt
invoice_extraction_app/: api.py  hooks.py  mistral.py  modules.txt  telegram.py  telegram_mistral.py
invoice_extraction_app/invoice_extraction_app/doctype/extracted_invoice/: __init__.py  extracted_invoice.js  extracted_invoice.json  extracted_invoice.py
invoice_extraction_app/invoice_extraction_app/doctype/extracted_invoice_item/: __init__.py  extracted_invoice_item.json  extracted_invoice_item.py
invoice_extraction_app/invoice_extraction_app/doctype/gemini_api_key/: gemini_api_key.json
invoice_extraction_app/invoice_extraction_app/doctype/gemini_settings/: __init__.py  gemini_settings.js  gemini_settings.json  gemini_settings.py
invoice_extraction_app/invoice_extraction_app/doctype/mistral_settings/: mistral_settings.js  mistral_settings.json  mistral_settings.py  test_mistral_settings.py
invoice_extraction_app/invoice_extraction_app/doctype/telegram_settings/: telegram_settings.json
