[project]
name = "invoice_extraction_app"
authors = [
    { name = "waddah", email = "wd@wd.wd"}
]
description = "Invoice Extraction App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "google-generativeai",
    "pillow",
    "requests",
    "python-dotenv"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
